# kl-sharepoint-mcp

./: README.md  pyproject.toml
src/mcp_sharepoint/: __init__.py  auth.py  common.py  graph.py  server.py  tools.py
